--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weekly Training Program Generator</title>
+    <title>Gym Workout</title>
     <meta name="theme-color" content="#1a1a2e">
     <meta name="description" content="Evidence-Based Exercise Programming with Comprehensive Tracking">
     <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1>📊 Advanced Training Program Generator</h1>
-        <p class="subtitle">Evidence-Based Exercise Programming with Comprehensive Tracking</p>
+        <h1>📊 Gym Training Program by Guru Ji #KrishnaGupta(CA)</h1>
+        <p class="subtitle">Radhe Radhe 🙏</p>
         
         <div class="program-overview">
             <div class="day-card">
@@ -47,46 +47,6 @@
                 <div class="exercise-count">15 exercises • Mixed protocols</div>
             </div>
         </div>
-
-        <div class="features">
-            <div class="feature-card">
-                <div class="feature-title">🎯 Scientific Programming</div>
-                <div class="feature-description">
-                    Evidence-based exercise selection with precise rep ranges, set protocols, and rest intervals optimized for hypertrophy and strength development.
-                </div>
-            </div>
-            <div class="feature-card">
-                <div class="feature-title">📈 Progressive Overload</div>
-                <div class="feature-description">
-                    Systematic progression tracking with load, volume, and intensity parameters to ensure continuous adaptation and prevent plateaus.
-                </div>
-            </div>
-            <div class="feature-card">
-                <div class="feature-title">🔬 Biomechanical Analysis</div>
-                <div class="feature-description">
-                    Detailed exercise descriptions with muscle activation patterns, joint angles, and movement mechanics for optimal execution.
-                </div>
-            </div>
-            <div class="feature-card">
-                <div class="feature-title">⚡ Recovery Protocols</div>
-                <div class="feature-description">
-                    Scientifically-determined rest intervals and recovery strategies to maximize training adaptations and minimize overtraining risk.
-                </div>
-            </div>
-        </div>
-
-        <div class="generate-section">
-            <button class="generate-btn" id="generateBtn">
-                Generate Complete Excel Workbook
-            </button>
-            <div class="loading" id="loading">
-                <div>Processing training data...</div>
-                <div class="progress-bar">
-                    <div class="progress-fill" id="progressFill"></div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <script src="app.js"></script>
 </body>
