--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>📊 Gym Training Program by Guru Ji #KrishnaGupta(CA)</h1>
+        <h1><span>Gym Training Program by Guru Ji #KrishnaGupta(CA)</span></h1>
         <p class="subtitle">Radhe Radhe 🙏</p>
         
         <div class="program-overview">
