--- a/index.html
+++ b/index.html
@@ -12,40 +12,52 @@
 </head>
 <body>
     <div class="container">
-        <h1><span>Gym Training Program by Guru Ji #KrishnaGupta(CA)</span></h1>
+        <h1 id="main"><span>Gym Training Program by Guru Ji #KrishnaGupta(CA)</span></h1>
         <p class="subtitle">Radhe Radhe 🙏</p>
         
         <div class="program-overview">
-            <div class="day-card">
-                <div class="day-title">Monday</div>
-                <div class="muscle-group">Biceps Training</div>
-                <div class="exercise-count">8 exercises • 24 total sets</div>
-            </div>
-            <div class="day-card">
-                <div class="day-title">Tuesday</div>
-                <div class="muscle-group">Shoulder Development</div>
-                <div class="exercise-count">9 exercises • 27 total sets</div>
-            </div>
-            <div class="day-card">
-                <div class="day-title">Wednesday</div>
-                <div class="muscle-group">Chest Training</div>
-                <div class="exercise-count">10 exercises • 30 total sets</div>
-            </div>
-            <div class="day-card">
-                <div class="day-title">Thursday</div>
-                <div class="muscle-group">Back Development</div>
-                <div class="exercise-count">11 exercises • 33 total sets</div>
-            </div>
-            <div class="day-card">
-                <div class="day-title">Friday</div>
-                <div class="muscle-group">Leg Training</div>
-                <div class="exercise-count">12 exercises • 36 total sets</div>
-            </div>
-            <div class="day-card">
-                <div class="day-title">Saturday</div>
-                <div class="muscle-group">Abs + Triceps + Cardio</div>
-                <div class="exercise-count">15 exercises • Mixed protocols</div>
-            </div>
+            <a href="monday.html" class="day-link">
+                <div class="day-card">
+                    <div class="day-title">Monday</div>
+                    <div class="muscle-group">Biceps Training</div>
+                    <div class="exercise-count">8 exercises • 24 total sets</div>
+                </div>
+            </a>
+            <a href="tuesday.html" class="day-link">
+                <div class="day-card">
+                    <div class="day-title">Tuesday</div>
+                    <div class="muscle-group">Shoulder Development</div>
+                    <div class="exercise-count">9 exercises • 27 total sets</div>
+                </div>
+            </a>
+            <a href="wednesday.html" class="day-link">
+                <div class="day-card">
+                    <div class="day-title">Wednesday</div>
+                    <div class="muscle-group">Chest Training</div>
+                    <div class="exercise-count">10 exercises • 30 total sets</div>
+                </div>
+            </a>
+            <a href="thursday.html" class="day-link">
+                <div class="day-card">
+                    <div class="day-title">Thursday</div>
+                    <div class="muscle-group">Back Development</div>
+                    <div class="exercise-count">11 exercises • 33 total sets</div>
+                </div>
+            </a>
+            <a href="friday.html" class="day-link">
+                <div class="day-card">
+                    <div class="day-title">Friday</div>
+                    <div class="muscle-group">Leg Training</div>
+                    <div class="exercise-count">12 exercises • 36 total sets</div>
+                </div>
+            </a>
+            <a href="saturday.html" class="day-link"">
+                <div class="day-card">
+                    <div class="day-title">Saturday</div>
+                    <div class="muscle-group">Abs + Triceps + Cardio</div>
+                    <div class="exercise-count">15 exercises • Mixed protocols</div>
+                </div>
+            </a>
         </div>
 
     <script src="app.js"></script>
