--- a/monday.html
+++ b/monday.html
@@ -71,7 +71,7 @@
                     <div class="exercise-title-wrapper">
                         <h2>1️⃣ Dumbbell Alternate Bicep Curl</h2>
                         <!-- Moved play button here -->
-                        <button class="play-button" data-video="Biceps/1.mp4">
+                        <button class="play-button" data-video="Bicepx1.mp4">
                             <svg viewBox="0 0 24 24" width="20" height="20">
                                 <path fill="currentColor" d="M8 5v14l11-7z"/>
                             </svg>
