--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
     <!-- PWA Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="theme-color" content="#1a1a2e">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="Gym Workout">
     <meta name="description" content="Your personal gym training program with exercise tracking">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="https://yashk45929.github.io/workout/manifest.json">
 </head>
 <body>
     <div class="container">
