--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 id="main"><span>Gym Training Program by Guru Ji #KrishnaGupta(CA)</span></h1>
+        <h1 id="main"><span>Gym Training Program by Guru Ji #CA Krishna Gupta</span></h1>
         <p class="subtitle">Radhe Radhe 🙏</p>
         
         <div class="program-overview">
